two app/two-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    app: apache
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
        version: v1
    spec:
      containers:
      - name: apache
        image: httpd
        imagePullPolicy: Always
        ports:
        - name: apache
          containerPort: 80                
        resources:
          requests:
            cpu: 100m
            memory: 100Mi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: v2
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: Always
        ports:
        - name: nginx
          containerPort: 80                
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        lifecycle:
          postStart:
            exec:
              command: ["/bin/bash", "-c", "echo Wellcome to ng2.ru Version 2222 > /usr/share/nginx/html/index.html"]

---
apiVersion: v1
kind: Service
metadata:
  name: service-apache
  labels:
    app: apache
    version: v1
spec:
  selector:
    app: apache
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  labels:
    app: nginx
    version: v2
spec:
  selector:
    app: nginx
    version: v2
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-apache
spec:
  hosts:
  - "ng1.ru"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: "service-apache"
        subset: v1
        port:
          number: 80
    mirror:    # зеркалируем трафик приходящий на ng1.ru (apache) в service-nginx (ng2.ru)    
      host: "service-nginx" 
      subset: v2    
    fault: # В 50% случаев страница будет не доступна
      abort:
        percentage:
          value: 50
        httpStatus: 404
    retries: #  политику повтора в случае получения заданых условий в retryOn
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream,retriable-4xx

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-nginx
spec:
  hosts:
  - "ng2.ru"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: "service-nginx"
        port:
          number: 80
    fault: # В 50% случаев страница будет обновлена с задержкой в 5 секунд
      delay:
        percentage:
          value: 50
        fixedDelay: 5s

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-apache
      protocol: HTTP
    hosts:
    - "ng1.ru"
  - port:
      number: 80
      name: http-nginx
      protocol: HTTP
    hosts:
    - "ng2.ru"
